--- a/style.css
+++ b/style.css
@@ -1,6 +1,122 @@
-h1 {
+
+*{
+    box-sizing: border-box;
+}
+html{
+    height: 100%;
+    margin:0 auto;
+}
+h1{
+    width:100%;
+    text-align: center;
+
+}
+.tablink{
+    background-color:deepskyblue;
     color:white;
+    float:left;
+    border:none;
+    outline:none;
+    cursor:pointer;
+    padding:14px 16px;
+    font-size:25px;
+    width:25%;
+
+}
+.tablink:hover{
+        background-color: skyblue;
+}
+.tablink:active{
     background-color: skyblue;
-    padding: 50px;
-    margin: 20px;
+}
+
+.tabcontent{
+    color:black;
+    padding:80px 20px;
+    height:860px;
+    display:none;
+    background-color: white;
+    background-size:contain;
+    background-repeat: repeat;
+    opacity:1;
+
+}
+#aboutMeImg{
+    width:200px;
+    height:200px;
+}
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+input[type=submit] {
+    background-color: deepskyblue;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: deepskyblue;
+}
+
+.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+/*#home{*/
+/*    background-color: yellow;*/
+/*}*/
+/*#about_me{*/
+/*    background-color: red;*/
+/*}*/
+/*#contact_me{*/
+/*    background-color: greenyellow;*/
+/*}*/
+/*#gallery{*/
+/*    background-color: aqua;*/
+/*}*/
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+}
+
+.column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+    .column {
+        flex: 50%;
+        max-width: 50%;
+    }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+        flex: 100%;
+        max-width: 100%;
+    }
 }
