--- a/style.css
+++ b/style.css
@@ -18,9 +18,12 @@ h1{
     border:none;
     outline:none;
     cursor:pointer;
-    padding:14px 16px;
-    font-size:25px;
+    cursor:pointer;
+    padding: 14px 16px;
+    font-size: 19px;
+    transition: 0.3s;
     width:25%;
+    height:100px;
 
 }
 .tablink:hover{
