--- a/style.css
+++ b/style.css
@@ -16,21 +16,29 @@ h1{
     color:white;
     float:left;
     border:none;
-    outline:none;
-    cursor:pointer;
+    border-color: deepskyblue;
+    outline:none !important;
     cursor:pointer;
     padding: 14px 16px;
     font-size: 20px;
-    transition: 0.3s;
     width:25%;
     height:80px;
 
 }
-.tablink:hover{
-        background-color: skyblue;
-}
+/*.tablink:hover{*/
+/*        background-color: skyblue;*/
+/*}*/
 .tablink:active{
-    background-color: skyblue;
+    background-color: white;
+    color:deepskyblue;
+    outline:none;
+
+}
+button.active {
+    background-color: white;
+    outline:none;
+    color:deepskyblue;
+   border:2px solid deepskyblue;
 }
 
 .tabcontent{
