--- a/style.css
+++ b/style.css
@@ -53,8 +53,9 @@ button.active {
 
 }
 #aboutMeImg{
-    width:200px;
-    height:200px;
+    float:right;
+    width:300px;
+    height:300px;
 }
 input[type=text], select, textarea {
     width: 100%;
