--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ button.active {
     float:right;
     width:300px;
     height:200px;
+    padding-bottom: 10px;
 }
 input[type=text], select, textarea {
     width: 100%;
